Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,62 +1,68 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=640">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
+    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
 
-  <title>Potato</title>
-  <meta name="description" content="potatoes taste good">
+    <script type="text/javascript" src="javascripts/modernizr.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $('#main_content').headsmart()
+      })
+    </script>
+    <title>Potato by JoshMintz</title>
+  </head>
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <body>
+    <a id="forkme_banner" href="https://github.com/JoshMintz/potato">View on GitHub</a>
+    <div class="shell">
 
-</head>
+      <header>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <h1>Potato</h1>
+            <h2>potatoes taste good</h2>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+      </header>
 
-<body>
+      <section id="downloads">
+        <span class="inner">
+          <a href="https://github.com/JoshMintz/potato/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/JoshMintz/potato/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+        </span>
+      </section>
 
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Potato</h1>
-    </header>
-    <div id="container">
-      <p class="tagline">potatoes taste good</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/JoshMintz/potato/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/JoshMintz/potato/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/JoshMintz/potato" class="code">View Potato on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <p>Potatoes are great because you can eat them. You can mash them, fry them, or put them in a stew. Mashed potatoes are tasty with steak. Fried potatoes go good with cheeseburgers and sandwiches. When yo put potatoes in a stew you make that stew at least 10 times better. Potatoes are the best type of food because they are filling and taste good. </p>
-        </article>
-      </div>
+
+      <span class="banner-fix"></span>
+
+
+      <section id="main_content">
+        <p>Potatoes are great because you can eat them. You can mash them, fry them, or put them in a stew. Mashed potatoes are tasty with steak. Fried potatoes go good with cheeseburgers and sandwiches. When yo put potatoes in a stew you make that stew at least 10 times better. Potatoes are the best type of food because they are filling and taste good. </p>
+      </section>
+
+      <footer>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <p>this project by <a href="https://github.com/JoshMintz">JoshMintz</a> can be found on <a href="https://github.com/JoshMintz/potato">GitHub</a></p>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
+        <span class="octocat"></span>
+      </footer>
+
     </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/JoshMintz" class="avatar"><img src="https://avatars0.githubusercontent.com/u/13920817?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/JoshMintz">JoshMintz</a> maintains <a href="https://github.com/JoshMintz/potato">Potato</a></p>
 
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/JoshMintz/potato/tarball/master" class="tar">tar</a><a href="https://github.com/JoshMintz/potato/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
-</body>
+    
+  </body>
 </html>
